--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (19/05/21)
+      Last updated (21/05/21)
     </h2>
     <div style="display: flex; margin-top: 80px;">
 
@@ -89,16 +89,31 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=judiciary&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
 
-        <div><span class="xui-alert-link__number">4c</span> <span class="govuk-body" style="margin-left: 10px;">Extra scenario (legal ops user is allocating a judicial role)</span> </div>
+        <div><span class="xui-alert-link__number">4c</span> <span class="govuk-body" style="margin-left: 10px;">(not required for judicial)</span> </div>
         <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+                <div class="govuk-!-padding-bottom-6"></div>
 
+<!--
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-nojlo?usertype=judiciary&">Roles and access - Allocate role</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajnlo?usertype=judiciary&">Roles and access - Allocate a judicial role</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhanlo?usertype=judiciary&">Roles and access - Allocate a judicial role - find</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndurlo?usertype=judiciary&">Roles and access - Allocate a judicial role - duration</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchknlo?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=judiciary&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
-
+-->
 
 
 <hr class="govuk-section-break govuk-section-break--visible">
