--- a/app/views/workallocation/pages/PA-00467-2017-ar.html
+++ b/app/views/workallocation/pages/PA-00467-2017-ar.html
@@ -133,7 +133,7 @@ Case details
         </tbody>
     </table>
     <p><a href="#" class="govuk-link">Add</a></p>
-        <h2 class="govuk-heading-m">Caseworkers</h2>
+        <h2 class="govuk-heading-m">Legal Ops</h2>
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
