--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-who.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-who.html
@@ -25,7 +25,7 @@ Case details
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="#">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-              Allocate to me
+              Reserve to me
             </label>
           </div>
           <div class="govuk-radios__item">
