--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -89,21 +89,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=judiciary&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
 
-        <div><span class="xui-alert-link__number">4c</span> <span class="govuk-body" style="margin-left: 10px;">(not required for judicial)</span> </div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
-        <div class="govuk-!-padding-bottom-6"></div>
+
                 <div class="govuk-!-padding-bottom-6"></div>
 
 <!--
@@ -157,7 +143,7 @@ GOV.UK Prototype Kit
   <!-- SECTION BREAK -->
 
   <h2 class="govuk-heading-l">Add an exclusion</h2>
-  <div class="xui-alert-link__number">6a </div>
+  <div class="xui-alert-link__number">6a</div>
   <div class="govuk-!-padding-bottom-6"></div>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=judiciary&">Roles and access</a><br>Checked with DS - v3.3</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi?usertype=judiciary&">Roles and access - Add an exclusion - Who</a><br>Checked with DS - v3.3</p>
@@ -171,17 +157,17 @@ GOV.UK Prototype Kit
 
 <!-- SECTION BREAK -->
 
-<h2 class="govuk-heading-l">Allocate Legal Ops role</h2>
+<h2 class="govuk-heading-l">Allocate Legal Ops role (Judicial)</h2>
 <div class="xui-alert-link__number">6b </div>
 <div class="govuk-!-padding-bottom-6"></div>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-lo?usertype=judiciary&">Roles and access</a><br>Checked with DS - v3.3</p>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor?usertype=judiciary&">Choose a role</a><br>Checked with DS - v3.3</p>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-ftp?usertype=judiciary&">Find the person</a><br>Checked with DS - v3.3</p>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-dur?usertype=judiciary&">Duration of role</a><br>Checked with DS - v3.3</p>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-chk?usertype=judiciary&">Check your allocation</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-lo-j?usertype=judiciary&">Roles and access</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alorj?usertype=judiciary&">Choose a role</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-ftpj?usertype=judiciary&">Find the person</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-durj?usertype=judiciary&">Duration of role</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-chkj?usertype=judiciary&">Check your allocation</a><br>Checked with DS - v3.3</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-lo?usertype=judiciary&">Role allocated</a><br>Checked with DS - v3.3</p>
 
-
+<p class="govuk-!-padding-bottom-2"></p><p class="govuk-!-padding-bottom-2"></p><p class="govuk-!-padding-bottom-2"></p>
 
 
 <h2 class="govuk-heading-l">My cases</h2>
@@ -348,9 +334,9 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjc?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - confirmation</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-none?usertype=staff&">Roles and access - no active tasks for case</a> - v3.3</p>
     <br>
-    <div class="xui-alert-link__number">4b </div>
+    <div><span class="xui-alert-link__number">4b </span><span class="govuk-body" style="margin-left: 10px;">Staff version - (legal ops user is allocating a judicial role)</span></div>
     <div class="govuk-!-padding-bottom-6"></div>
-
+<!--
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-noj?usertype=staff&">Roles and access - Allocate role</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajn?usertype=staff&">Roles and access - Allocate a judicial role</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-err-s?usertype=staff&">Roles and access - Allocate role - generic error</a><br>NEW - additional generic error page when no selction has been made</p>
@@ -360,16 +346,21 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=staff&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=staff&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
 
-    <div><span class="xui-alert-link__number">4c</span> <span class="govuk-body" style="margin-left: 10px;">Extra scenario (legal ops user is allocating a judicial role)</span> </div>
+    <div><span class="xui-alert-link__number">4c</span> <span class="govuk-body" style="margin-left: 10px;">Extra scenario </span> </div>
     <div class="govuk-!-padding-bottom-6"></div>
-
+-->
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-nojlo?usertype=staff&">Roles and access - Allocate role</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajnlo?usertype=staff&">Roles and access - Allocate a judicial role</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhanlo?usertype=staff&">Roles and access - Allocate a judicial role - find</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndurlo?usertype=staff&">Roles and access - Allocate a judicial role - duration</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchknlo?usertype=staff&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=staff&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
-
+  <div class="govuk-!-padding-bottom-6"></div>
+    <div class="govuk-!-padding-bottom-6"></div>
+      <div class="govuk-!-padding-bottom-6"></div>
+      <div class="govuk-!-padding-bottom-6"></div>
+        <div class="govuk-!-padding-bottom-6"></div>
+          <div class="govuk-!-padding-bottom-6"></div>
     <hr class="govuk-section-break govuk-section-break--visible">
     <p class="govuk-!-padding-bottom-2"></p>
 
@@ -430,6 +421,10 @@ GOV.UK Prototype Kit
     <div class="govuk-!-padding-bottom-6"></div>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-lo?usertype=staff&">Roles and access</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor?usertype=staff&">Choose a role</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-who?usertype=staff&">Allocate the role</a><br>Checked with DS - v3.3</p>
+
+
+
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-ftp?usertype=staff&">Find the person</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-dur?usertype=staff&">Duration of role</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-chk?usertype=staff&">Check your allocation</a><br>Checked with DS - v3.3</p>
