--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -32,7 +32,7 @@ Case details
       </summary>
       <div class="govuk-details__text">
 
-        <p class="govuk-body">If possible, you should include:</p>
+        <p class="govuk-body">You could include:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>the case reference of the linked case </li>
   <li>how long you require access to this case</li>
