--- a/app/views/caseaccess/pages/PA-00467-2017-request-error.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request-error.html
@@ -46,7 +46,7 @@ This case requires specific access.<br>This means it’s outside your jurisdicti
       </summary>
       <div class="govuk-details__text">
 
-        <p class="govuk-body">If possible, you should include:</p>
+        <p class="govuk-body">You could include:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>the case reference of the linked case </li>
   <li>how long you require access to this case</li>
