--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (21/05/21)
+      Last updated (25/05/21)
     </h2>
     <div style="display: flex; margin-top: 80px;">
 
@@ -126,7 +126,7 @@ GOV.UK Prototype Kit
 
         <!-- SECTION BREAK -->
 
-        <h2 class="govuk-heading-l">Add a fee-paid judge (IAC)</h2>
+        <h2 class="govuk-heading-l"> Allocate a judicial role (IAC)</h2>
         <div class="xui-alert-link__number">6 </div>
         <div class="govuk-!-padding-bottom-6"></div>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj?usertype=judiciary&">Roles and access - Allocate a role (IAC)</a><br>Checked with DS - v3.3</p>
@@ -385,20 +385,21 @@ GOV.UK Prototype Kit
 
     <!-- SECTION BREAK -->
 
-    <h2 class="govuk-heading-l">Add a fee-paid judge (IAC)</h2>
+    <h2 class="govuk-heading-l">Allocate a judicial role (IAC)</h2>
     <div class="xui-alert-link__number">6 </div>
     <div class="govuk-!-padding-bottom-6"></div>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpj?usertype=staff&">Roles and access - Allocate a role (IAC)</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Choose a role (IAC)</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.3 </p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC)</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar-fpjl?usertype=staff&">Roles and access - Allocate a role (IAC)</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpjl?usertype=staff&">Roles and access - Allocate a judicial role - Choose a role (IAC)</a><br>Checked with DS - v3.3</p>
+  <!--  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpjl?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.3 </p>
+  -->  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpjl?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpjl?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC)</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC) - ERROR - 1</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err-2?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC) - ERROR - 2</a><br>Checked with DS - v3.3</p>
 
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arj-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br>Checked with DS - v3.3</p>
-
+    <p class="govuk-!-padding-bottom-6"></p>
+    <p class="govuk-!-padding-bottom-4"></p>
     <!-- SECTION BREAK -->
 
     <h2 class="govuk-heading-l">Add an exclusion</h2>
