--- a/app/views/workallocation/pages/wa-mytasks-refunds.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds.html
@@ -1,104 +1,48 @@
-{% if  data.usertype == 'judiciary'   %}
-{% extends "../layoutjudicial.html" %}
-{% else %}
-{% extends "../layoutstaff.html" %}
-{% endif %}
+{% extends "../layoutpros.html" %}
 {% block pageTitle %}
-My work
+Refunds
 {% endblock %}
 {% block content %}
 <div class="hmcts-page-heading">
   <div class="hmcts-page-heading__title">
-    <h1 class="govuk-heading-xl">My work</h1>
+    <h1 class="govuk-heading-xl">Refunds</h1>
   </div>
 </div>
-<p>Access tasks and cases.</p>
-{{ govukButton({
-  text: "Show work filter",
-  classes: "govuk-button--secondary"
-}) }}
+
 <div class="hmcts-scrollable-pane">
   <div class="hmcts-scrollable-pane__wrapper">
-    <nav class="hmcts-sub-navigation">
-      <ul class="hmcts-sub-navigation__list">
-        <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-mytasks-a">
-            My tasks
-          </a>
-        </li>
-        <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="#">
-            Available tasks
-          </a>
-        </li>
-        <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="#">
-            My cases
-          </a>
-        </li>
-        <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="#">
-            My access
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> tasks</p>
+    <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> refunds</p>
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 25px;" aria-sort="none"></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Trigger</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 100px;" aria-sort="none"></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
         </tr>
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-lms">Lacey-May Sanders</a></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn&casetype=divorce&allocated=true&unallocated=false&billonaccount=true&needspaying=false&remission=false&twotabs=false&errorofdata=false&pbascenario=false&errorofdatapayments=false&nopartyinfooncase=false&refunds=true">Review refund request</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-lms">4692-3164-5845-4819</a></td>
+          <td class="govuk-table__cell">Case withdrawn</a>
           <td class="govuk-table__cell">{{govukTag({
           text: now | date( 'subtract', 2, 'days' ) | date,
-          classes: "govuk-tag--red"
+          classes: "govuk-tag--grey"
         })}} </td>
-          <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-ao" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-pj">Patti Jo</a></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-          <td class="govuk-table__cell"> {{govukTag({
-          text: now | date( 'subtract', 5, 'days' ) | date,
-          classes: "govuk-tag--red"
-        })}}</td>
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="http://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn&">Review refund request</a></td>
         </tr>
 
 
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-hr">Hudson Remi</a></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn&casetype=divorce&allocated=true&unallocated=false&billonaccount=true&needspaying=false&remission=false&twotabs=false&errorofdata=false&pbascenario=false&errorofdatapayments=false&nopartyinfooncase=false&refunds=true">Review refund request</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-hr">3164-1234-5845-4819</a></td>
+          <td class="govuk-table__cell">Remission granted</a>
           <td class="govuk-table__cell"> {{govukTag({
           text: now | date( 'subtract', 5, 'days' ) | date,
-          classes: "govuk-tag--red"
+          classes: "govuk-tag--grey"
         })}}</td>
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="http://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn&">Review refund request</a></td>
         </tr>
         
-
       </tbody>
     </table>
     {% endblock %}
