--- a/app/views/workallocation/pages/wa-mytasks-refunds.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds.html
@@ -23,7 +23,7 @@ Refunds
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-lms">4692-3164-5845-4819</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">4692-3164-5845-4819</td>
           <td class="govuk-table__cell">Case withdrawn</a>
           <td class="govuk-table__cell">{{govukTag({
           text: now | date( 'subtract', 2, 'days' ) | date,
@@ -34,7 +34,7 @@ Refunds
 
 
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-hr">3164-1234-5845-4819</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">3164-1234-5845-4819</td>
           <td class="govuk-table__cell">Remission granted</a>
           <td class="govuk-table__cell"> {{govukTag({
           text: now | date( 'subtract', 5, 'days' ) | date,
