--- a/app/views/workallocation/pages/wa-mytasks-refunds.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds.html
@@ -5,7 +5,7 @@ Refunds
 {% block content %}
 <div class="hmcts-page-heading">
   <div class="hmcts-page-heading__title">
-    <h1 class="govuk-heading-xl">Refunds</h1>
+    <h1 class="govuk-heading-xl">Refund queue</h1>
   </div>
 </div>
 
