--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-2.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-2.html
@@ -39,12 +39,12 @@ Case details
               Admin
             </label>
           </div>
-          <div class="govuk-radios__item">
+      <!--    <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-4" name="bob" type="radio" value="#">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
               Home Office
             </label>
-          </div>
+          </div> -->
         </div>
       </fieldset>
     </div>
