--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -274,7 +274,7 @@ GOV.UK Prototype Kit
 
     <!-- STAFF -->
 
-    <h2 class="govuk-heading-l">My work judiciary</h2>
+    <h2 class="govuk-heading-l">My work staff</h2>
     <div class="xui-alert-link__number">1 </div>
     <div class="govuk-!-padding-bottom-6"></div>
     <!-- SECTION BREAK -->
@@ -396,7 +396,7 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC) - ERROR - 1</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err-2?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC) - ERROR - 2</a><br>Checked with DS - v3.3</p>
 
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpjl?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arj-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br>Checked with DS - v3.3</p>
     <p class="govuk-!-padding-bottom-6"></p>
     <p class="govuk-!-padding-bottom-4"></p>
