--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,8 +9,9 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (25/5/21)
+      Last updated (27/5/21)
     </h2>
+<p class="govuk-body-l">Page widths have been increased to new wider width.</p>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
 
