--- a/app/views/caseaccess/layoutstaff-c.html
+++ b/app/views/caseaccess/layoutstaff-c.html
@@ -42,24 +42,30 @@
 
 {% block header %}
   {% include "includes/cookie-banner.html" %}
-
+  <style>
+    .govuk-width-container {
+      max-width: 1820px;
+    }
+  </style>
 
 
 
     <header class="hmcts-header" role="banner">
 
-        <div style="width:1220px; display: flex; margin: 0 auto;">
+        <div style="width:1820px; display: flex; margin: 0 auto;">
 
             <div style="width: 406px; ">
                 <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/caseaccess">Manage Cases</a>
             </div>
-
+<!--
             <div class="hmcts-header__container" style="width: 812px;">
 
                 <div class="hmcts-header__logo">
                     <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist" aria-current="page"></a>
                 </div>
-
+-->
+<div style="display: flex; flex-grow: 1;">
+</div>
                 <div class="hmcts-header__content">
                     <nav class="hmcts-header__navigation" aria-label="Account navigation">
                         <ul class="hmcts-header__navigation-list">
@@ -74,7 +80,7 @@
 
             </div>
 
-        </div>
+
 
 
     </header>
@@ -85,7 +91,7 @@
 
 
     <div  style="background-color: #0b0c0c;">
-        <div style="width:1220px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
+        <div style="width:1820px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
 
             <div style="width: 0px; ">
 
