--- a/app/views/caseaccess/layoutstaff.html
+++ b/app/views/caseaccess/layoutstaff.html
@@ -53,19 +53,22 @@
 
     <header class="hmcts-header" role="banner">
 
-        <div style="width:1220px; display: flex; margin: 0 auto;">
+        <div style="width:1820px; display: flex; margin: 0 auto;">
 
-            <div style="width: 406px; ">
-                <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/caseaccess">Manage Cases</a>
-            </div>
-
+          <div style="width: 406px; ">
+              <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/workallocation">Manage Cases</a>
+          </div>
+<!--
             <div class="hmcts-header__container" style="width: 812px;">
 
                 <div class="hmcts-header__logo">
                     <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist" aria-current="page"></a>
                 </div>
+-->
+<div style="display: flex; flex-grow: 1;">
+</div>
 
-                <div class="hmcts-header__content">
+          <div class="hmcts-header__content">
                     <nav class="hmcts-header__navigation" aria-label="Account navigation">
                         <ul class="hmcts-header__navigation-list">
                             <li class="hmcts-header__navigation-item">
@@ -79,7 +82,7 @@
 
             </div>
 
-        </div>
+
 
 
     </header>
@@ -90,7 +93,7 @@
 
 
     <div  style="background-color: #0b0c0c;">
-        <div style="width:1220px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
+        <div style="width:1820px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
 
             <div style="width: 0px; ">
 
