--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -108,7 +108,7 @@ Case details
     <select size="1" name="hop" style="height:25px;" onchange="document.location.href=this.value">
     <option selected value=""> Select an option</option>
     <option value="/caseaccess/pages/PA-00321-2018-request">No errors</option>
-    <option value="/caseaccess/pages/PA-00321-2018-request-error">Missing text</option>
+    <option value="/caseaccess/pages/PA-00321-2018-request-error">Missing selection</option>
     </select>
 </form>
 {% endblock %}
