--- a/app/views/caseaccess/pages/PA-00467-2017-request-error.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request-error.html
@@ -14,7 +14,7 @@ Case details
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#passport-issued-error">Enter more detail</a>
+        <a href="#passport-issued-error">Enter reason</a>
       </li>
     </ul>
   </div>
@@ -61,14 +61,14 @@ This case requires specific access.<br>This means it’s outside your jurisdicti
       Provide a reason.
     </div>
     <span id="passport-issued-error" class="govuk-error-message">
-      <span class="govuk-visually-hidden">Error:</span> Enter more detail
+      <span class="govuk-visually-hidden">Error:</span> Enter reason
     </span>
     <!--
     <ul class="govuk-list govuk-list--bullet">
 <li>the case reference</li>
 <li>how long you need to access this case for</li>
 </ul> -->
-    <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="8" aria-describedby="more-detail-hint"></textarea>
+    <textarea class="govuk-textarea govuk-textarea--error" id="more-detail" name="more-detail" rows="8" aria-describedby="more-detail-hint"></textarea>
     </div>
 
 
