--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-3-error1.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-3-error1.html
@@ -37,7 +37,7 @@ Case details
   <span id="passport-issued-error" class="govuk-error-message">
      <span class="govuk-visually-hidden">Error:</span> Enter a name and select to continue
    </span>
-  <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
+  <input class="govuk-input govuk-!-width-one-third govuk-input--error" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
 </div>
 
   <div class="govuk-button-group">
