--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-5-error.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-5-error.html
@@ -8,7 +8,7 @@
 Case details
 {% endblock %}
 {% block beforeContent %}
-<a href="wa-PA-00467-2017-coi-2" class="govuk-back-link">Back</a>
+<a href="wa-PA-00467-2017-coi-4" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
 <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
@@ -17,49 +17,42 @@ Case details
   </h2>
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
-
       <li>
-        <a href="#postcode-error">Enter a name and select to continue</a>
+        <a href="#passport-issued-error">Enter exclusion</a>
       </li>
     </ul>
   </div>
 </div>
-<h2 class="govuk-heading-l">Add an exclusion</h2>
 
 <div class="govuk-form-group govuk-form-group--error">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the person
+  <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="more-detail">
+      Add an exclusion
     </label>
-  </h2>
-  <div id="event-name-hint" class="govuk-hint">
-    Type the name of the person and select them.
-  </div>
-  <span id="passport-issued-error" class="govuk-error-message">
-     <span class="govuk-visually-hidden">Error:</span> Enter a name and select to continue
-   </span>
-  <input class="govuk-input govuk-!-width-one-third govuk-input--error" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint" value="asarah williams">
+  </h1>
+  <h2 class="govuk-heading-m">Describe the exclusion</h2>
+  <span id="more-detail-error" class="govuk-error-message">
+    <span class="govuk-visually-hidden">Error:</span> Enter exclusion
+  </span>
+  <textarea class="govuk-textarea govuk-!-width-one-half govuk-textarea--error" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint more-detail-error"></textarea>
 </div>
 
   <div class="govuk-button-group">
   {{ govukButton({
     text: "Continue",
-    href: "wa-PA-00467-2017-coi-4",
+href: "wa-PA-00467-2017-coi-6",
+
     classes: "govuk-!-margin-right-3"
   }) }}
 
   <p><a class="govuk-body" href="wa-PA-00467-2017-ar">Cancel</a></p>
 </div>
-
 <form method=""  action="#" class="for4" style=" float: left; margin-top: 60px;">
     <p style="margin-bottom: 0px;">Select to show validation errors</p>
     <select size="1" name="hop" style="height:25px;" onchange="document.location.href=this.value">
-    <option value=""> Select an option</option>
-    <option value="/workallocation/pages/wa-PA-00467-2017-coi-3">No errors</option>
-    <option value="/workallocation/pages/wa-PA-00467-2017-coi-3-error1">Missing name</option>
-    <option selected value="/workallocation/pages/wa-PA-00467-2017-coi-3-error2">Invalid name</option>
-
+    <option selected value=""> Select an option</option>
+    <option value="/workallocation/pages/wa-PA-00467-2017-coi-5">No errors</option>
+    <option value="/workallocation/pages/wa-PA-00467-2017-coi-5-error">Missing text</option>
     </select>
 </form>
-
 
 {% endblock %}
