--- a/app/views/caseaccess/pages/PA-00467-2017-trrc-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trrc-case.html
@@ -15,7 +15,7 @@ Case details
               }) }}
               <h2 class="govuk-heading-m">What happens next</h2>
               <p class="govuk-body">
-                The requester has been denied access to this case.
+                The requester has been sent an email informing them they have been denied access to this case.
               </p>
               <div class="govuk-button-group">
               {{ govukButton({
