--- a/app/views/caseaccess/pages/myaccess-p.html
+++ b/app/views/caseaccess/pages/myaccess-p.html
@@ -43,7 +43,7 @@ My work
             </li>
           </ul>
         </nav>
-        <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p>
+    <!--    <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p> -->
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -58,7 +58,12 @@ My work
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-              <tr class="govuk-table__row">
+
+              <tr>
+                  <td colspan="8">Cases you have been granted access to are displayed here.</td>
+              </tr>
+
+      <!--        <tr class="govuk-table__row">
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
@@ -66,8 +71,8 @@ My work
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
-              </tr>
+              <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+              </tr> -->
 
               </tbody>
           </table>
