--- a/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
@@ -19,15 +19,15 @@ Case details
         titleText: "Request sent",
         html: "Case reference:<br><strong>PA/00467/2017</strong>"
       }) }}
-  <!--    <p class="govuk-body">We have sent you a confirmation email.</p>
--->
+  <p class="govuk-body">We have sent you a confirmation email.</p>
+
       <h2 class="govuk-heading-m">What happens next</h2>
       <p class="govuk-body">
-      Your request to access this case file has been sent.</p>
+      Your request to access this case file has been sent. </p>
 
       <p class="govuk-body">
-        Once your request has been authorised, you’ll be able to access the case through <a href="myaccess-p" class="govuk-link">My access</a>.
-      </p>
+        We'll let you know our decision by email.<!--Once your request has been authorised, you’ll be able to access the case through <a href="myaccess-p" class="govuk-link">My access</a>.
+      --></p>
       <p>Your request will be logged for auditing purposes.
     </div>
   </div>
